--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -568,15 +568,23 @@
 
 
                 <div class="row" style="min-height:33%;display:none" id="UretilmisBarkodlar">
-                    <div id="UretilmisBarkodlarToolbar" class="d-flex justify-content-between align-items-center nowrap gap-1">
-                        <select id="uretilmis-barkod-dizayn" class="form-select" style="width: 90px;"></select>
-                        <select id="uretilmis-barkod-yazici" class="form-select" style="width: 90px;" disabled></select>
-                        <div class="form-check form-switch h-100 position-relative">
-                            <input class="form-check-input" style="width: 6rem; height: 2rem;" type="checkbox" id="yazdirSwitch" onclick="YazdirSwitch()">
-                            <span id="yazdirLabel" style="position: absolute; left: 0.5rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none; color: white; opacity: 0;">YAZDIR</span>
-                            <span id="yazdirmaLabel" style="position: absolute; left: 2.1rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none;">YAZDIRMA</span>
+                    <div id="UretilmisBarkodlarToolbar" class="row">
+                        <div class="col">
+                            <select id="uretilmis-barkod-dizayn" class="form-select" style="width: 110px;"></select>
                         </div>
-                        <button id="uretilmis-barkod-yazdir" class="btn btn-primary" onclick="UretilmisEtiketleriYazdir()" disabled>ÖNİZLE</button>
+                        <div class="col">
+                            <select id="uretilmis-barkod-yazici" class="form-select" style="width: 110px;" disabled></select>
+                        </div>
+                        <div class="col">
+                            <div class="form-check form-switch h-100 position-relative">
+                                <input class="form-check-input" style="width: 6rem; height: 2rem;" type="checkbox" id="yazdirSwitch" onclick="YazdirSwitch()">
+                                <span id="yazdirLabel" style="position: absolute; left: 0.5rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none; color: white; opacity: 0;">YAZDIR</span>
+                                <span id="yazdirmaLabel" style="position: absolute; left: 2.1rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none;">YAZDIRMA</span>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <button id="uretilmis-barkod-yazdir" class="btn btn-primary" onclick="UretilmisEtiketleriYazdir()" disabled>ÖNİZLE</button>
+                        </div>
                     </div>
                     <div class="table-responsive">
                         <div class="tableClass" style="max-height:680px">
